--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,20 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-F9GF9LFFG1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-F9GF9LFFG1");
+    </script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
